Attempting to fix WA OIDC integration tests